# DUT_browser

./: .gitignore  CHANGELOG.md  README.md  RELEASE.md  package.json  release.json  requirements.txt  update.ps1  update.sh
.github/workflows/: ci.yml  release.yml
desktop/: package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
dut-dashboard/: README.md  log_events.json  package-lock.json
dut-dashboard/backend/: requirements.txt  run_backend.py
dut-dashboard/backend/app/: config.py  main.py
dut-dashboard/backend/app/api/: analyzer_api.py  serial_api.py  snapshot_api.py
dut-dashboard/backend/app/parser/: sysmon_parser.py
dut-dashboard/backend/app/serial/: serial_worker.py
dut-dashboard/backend/app/services/: snapshot_store.py  version_service.py
dut-dashboard/backend/app/tools/: serial_tools.py
dut-dashboard/backend/app/websocket/: ws_manager.py
dut-dashboard/backend/tests/: test_serial_download_workflow.py  test_snapshot_api.py  test_sysmon_parser.py
dut-dashboard/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dut-dashboard/frontend/src/: main.tsx
dut-dashboard/frontend/src/api/: rest.ts  runtime.ts  websocket.ts
dut-dashboard/frontend/src/components/: ClientsPanel.tsx  ConsolePanel.tsx  MemoryChart.tsx  SnapshotReplayPanel.tsx
dut-dashboard/frontend/src/pages/: Dashboard.tsx
dut-dashboard/scripts/: sysMon.sh
dut-dashboard/tools/: log_event_detector.py
scripts/: bootstrap.sh  build_backend.py  setup_backend.sh
